# deals_test_task

./: .env  .gitignore  README.md  docker-compose.yml  entrypoint.sh
server/: Dockerfile  pyproject.toml
server/apps/deals/: admin.py  constants.py  models.py  serializers.py  urls.py  utils.py  views.py
server/apps/deals/migrations/: 0001_initial.py
server/config/: settings.py  urls.py
